# PixelPicasso

./: .clang-format  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/logic/: CMakeLists.txt  ImageConvertor.cpp  ImageConvertor.h  ImageResize.cpp  ImageResize.h
src/widget/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  ImageWidget.ui  MainWindow.cpp  MainWindow.h
src/widget/style/: CMakeLists.txt  DarkStyle.cpp  DarkStyle.h  LightStyle.cpp  LightStyle.h
